--- a/PackageTrackingSystemAndroid/app/src/main/AndroidManifest.xml
+++ b/PackageTrackingSystemAndroid/app/src/main/AndroidManifest.xml
@@ -21,12 +21,17 @@
             android:noHistory="true" >
             <intent-filter android:label="@string/app_name" >
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
         <activity
             android:name=".LoginActivity"
             android:label="@string/title_activity_login" >
+        </activity>
+        <activity
+            android:name=".MyStatusActivity"
+            android:label="@string/title_activity_my_status" >
         </activity>
     </application>
 
