--- a/PackageTrackingSystemAndroid/app/src/main/AndroidManifest.xml
+++ b/PackageTrackingSystemAndroid/app/src/main/AndroidManifest.xml
@@ -12,8 +12,8 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name=".ScanActivity"
-            android:label="@string/title_activity_scan" >
+            android:name=".MainActivity"
+            android:label="@string/title_activity_main" >
         </activity>
         <activity
             android:name=".DispatchActivity"
