Parent-children relations between activities

--- a/PackageTrackingSystemAndroid/app/src/main/AndroidManifest.xml
+++ b/PackageTrackingSystemAndroid/app/src/main/AndroidManifest.xml
@@ -21,7 +21,6 @@
             android:noHistory="true" >
             <intent-filter android:label="@string/app_name" >
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
@@ -32,10 +31,16 @@
         <activity
             android:name=".MyStatusActivity"
             android:label="@string/title_activity_my_status" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.pciesiol.packagetrackingsystemandroid.MainActivity" />
         </activity>
         <activity
             android:name=".PackageDetailsActivity"
             android:label="@string/title_activity_package_details" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.pciesiol.packagetrackingsystemandroid.MyStatusActivity" />
         </activity>
     </application>
 
